examples/bad/typecheck/wrong-return.oo
int h(int x, int y) {
    if (x == 2) {
            return 32;
    } else if (y > 42) {
        if (x == 3) {
            return "32";
            // return 32;
        } else {
            return 32;
        }
    } else {
        return 32;
    }
}
